Stop page from shifting when collapsing only group

--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,7 @@
 body {
   max-width: var(--max-width);
   margin: 0 auto;
+  overflow-y: scroll;
 }
 
 h1 {
